update jdk to 9.0.4 and disable the lra-tck